--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>yo</title>
     <link rel="icon" type="image/x-icon" href="fav-kl.svg">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
