--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h5>2019 - Present</h5>
           </div>
           <p class="desc">
-            My experience with web technologies and pursuant nature lead me to
+            My experience with web technologies and pursuant nature led me to
             pioneer an internal role for myself as a Website Specialist. I've
             played critical and authorative roles in growing this department
             from myself to over a dozen individuals. The department is now the
